push CSS updates

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
       <h1>Metallica Sucks Now - An Opinion</h1>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Metallica Sucks Now</title>
   </head>
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+  <link href="styles/styles.css" rel="stylesheet">
   <body>
     <img src="images/download.jpeg" alt="My test image">
+    <p>When I was a kid Metallica was a pretty big deal. Over the years, their 
+        popularity has increased but many early fans have abandoned them as their 
+        relevance has waned. The napster debacle didn't help much, but what's worse is 
+        the album Fuel. Here are some reasons it sucked</p>
+        <br>
+        <ul>
+            <li>The song titled "Fuel"</li>
+            <li>"eeeyyeeaahhss"</li>
+            <li>Lars Ulrich's constant reminders people need to pay for their music</li>
+            <br>
+        <h1>Links</h1>
+            <ol>
+                <li>
+                    <a href="https://www.google.com/search?q=lars+ulrich+napster&oq=lars+ulrich+napster&aqs=chrome..69i57j0l6.3030j0j7&sourceid=chrome&ie=UTF-8">Lars Ulrich & Napster</a>
+                </li>
+            </ol>
+        </ul>
   </body>
 </html> 
