minor text change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <h1>Metallica Sucks Now - An Opinion</h1>
+      <h1>Metallica Sucks Now -- Opinion or Fact?</h1>
     <meta charset="utf-8">
     <title>Metallica Sucks Now</title>
   </head>
